--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "deepl-node": "^1.10.2",
     "discord.js": "^14.13.0",
-    "node-fetch": "^2.7.0"
+    "fs": "^0.0.1-security",
+    "node-fetch": "^2.7.0",
+    "xml2js": "^0.6.2"
   }
 }
