--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "discord.js": "^14.13.0",
     "fs": "^0.0.1-security",
     "node-fetch": "^2.7.0",
+    "path": "^0.12.7",
     "xml2js": "^0.6.2"
   }
 }
