--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deepl-node": "^1.10.2",
     "discord.js": "^14.13.0",
     "fs": "^0.0.1-security",
+    "mysql": "^2.18.1",
     "node-fetch": "^2.7.0",
     "path": "^0.12.7",
     "xml2js": "^0.6.2"
