--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mysql": "^2.18.1",
     "node-fetch": "^2.7.0",
     "path": "^0.12.7",
-    "xml2js": "^0.6.2"
+    "xml2js": "^0.6.2",
+    "easy-sql-builder": "latest"
   }
 }
