--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "dependencies": {
     "deepl-node": "^1.10.2",
     "discord.js": "^14.13.0",
+    "easy-sql-builder": "^1.0.4",
     "fs": "^0.0.1-security",
     "mysql": "^2.18.1",
     "node-fetch": "^2.7.0",
     "path": "^0.12.7",
-    "xml2js": "^0.6.2",
-    "easy-sql-builder": "latest"
+    "xml2js": "^0.6.2"
   }
 }
