--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "archiver": "^6.0.1",
     "deepl-node": "^1.10.2",
     "discord.js": "^14.13.0",
+    "express": "^4.18.2",
+    "mysql": "^2.18.1",
     "node-fetch": "^2.7.0"
   }
 }
