--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "easy-sql-builder": "^1.0.4",
     "fs": "^0.0.1-security",
     "mysql": "^2.18.1",
+    "mysql2": "^3.15.3",
+    "node-cache": "^5.1.2",
     "node-fetch": "^2.7.0",
     "path": "^0.12.7",
     "xml2js": "^0.6.2"
